# FundingSpreadArbitrageV2

./: .gitignore  Cargo.toml  Global.md  IMPLEMENTATION_SUMMARY.md  PARSER_VALIDATION.md  PROFILING.md  ProjectLogic.md  README.md  Requirements.md  TRADE_VALIDATION_CRITERIA.md  TRADING_MONITOR_RATATUI.md  add_get_quantity_step.py  baseline_metrics.json  build-release.ps1  build-release.sh  check_output.txt  fix_mockbackend.ps1  libstreaming_benchmarks.rlib  monitor_trades.ps1  remove_binance.ps1  test_detector.ps1
.github/: BENCHMARK_GUIDE.md
benches/: end_to_end_benchmarks.rs  latency_benchmarks.rs  streaming_benchmarks.rs
docs/: benchmarking.md  branchless_validation.md  buffer_pool_usage.md  bybit-synthetic-24h-stability-test.md  bybit-synthetic-deployment-guide.md  bybit-synthetic-execution-success-rate.md  bybit-synthetic-final-validation-report.md  bybit-synthetic-latency-validation.md  bybit-synthetic-test-mode-user-guide.md  bybit-synthetic-throughput-validation.md  monitoring.md  streaming-architecture.md  thread_pinning.md  typestate_pattern.md
examples/: buffer_pool_demo.rs  order_typestate_demo.rs  profiling_demo.rs  symbol_map_benchmark.rs
scripts/: run_benchmarks.ps1  run_benchmarks.sh
src/: binance.rs  bitget.rs  bybit.rs  exchange_parser.rs  gateio.rs  hyperliquid.rs  kucoin.rs  lib.rs  lighter.rs  main.rs  okx.rs  paradex.rs  utils.rs
tests/: binance_best_ask_integration_test.rs  binance_best_bid_integration_test.rs  binance_order_book_cache_test.rs  binance_order_book_depth_integration_test.rs  buffer_pool_test.rs  bybit_order_book_depth_integration_test.rs  cache_prefetching_test.rs  cleanup_lock_test.rs  dashboard_cold_path_test.rs  depth_checker_test.rs  execution_pipeline_test.rs  graceful_shutdown_test.rs  hedge_lock_integration_test.rs  hedge_logger_test.rs  hedge_timing_checkpoints_test.rs  hedge_timing_metrics_test.rs  hybrid_arbitrage_integration_test.rs  latency_percentiles_measurement.rs  market_order_placer_retry_test.rs  market_update_test.rs  monitor_endpoint_test.rs  opportunity_consistency_test.rs  opportunity_queue_performance_test.rs  order_book_depth_test.rs  order_status_checker_test.rs  order_typestate_test.rs  pipeline_integration_test.rs  pipeline_test.rs  portfolio_atomic_test.rs  portfolio_locking_test.rs  price_chaser_test.rs  race_condition_guard_test.rs  redis_background_thread_test.rs  redis_bridge_pipeline_test.rs  redis_hot_path_removal_test.rs  simd_price_parsing_test.rs  strategy_runner_streaming_test.rs  streaming_backpressure_test.rs  (+10 more)
(+52 files in other folders)
