[package]
name = "arbitrage2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
redis = { version = "0.25", features = ["tokio-comp"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
ratatui = "0.27"
crossterm = "0.28"

[dev-dependencies]
proptest = "1"
