[package]
name = "arbitrage2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
redis = { version = "0.25", features = ["tokio-comp"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
ratatui = "0.27"
crossterm = "0.28"
async-trait = "0.1"
dotenv = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
dashmap = "5.5"
once_cell = "1.19"
crossbeam-queue = "0.3"
core_affinity = "0.8"
smallvec = { version = "1.11", features = ["union"] }
zerocopy = { version = "0.7", features = ["derive"] }
simd-json = "0.13"
lazy_static = "1.4"

[dev-dependencies]
proptest = "1"

[[bin]]
name = "arbitrage2"
path = "src/main.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "trading-monitor"
path = "src/bin/trading-monitor.rs"

[[bin]]
name = "demo-runner"
path = "src/bin/demo-runner.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "bybit-synthetic-test"
path = "src/bin/bybit-synthetic-test.rs"

# Old implementation - temporarily disabled due to missing dependencies
# [[bin]]
# name = "bybit-synthetic-test-old"
# path = "src/bin/bybit-synthetic-test-old.rs"
# required-features = []

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

